...
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate"/> -->

    <CheckBoxPreference
        android:defaultValue="true"
        android:id="@+id/notifCheckBox"
        android:key="notifications"
        android:title="Receive notifications"
        android:summary="Check this box if you are a non-collector that wants background service notifications"></CheckBoxPreference>

    <EditTextPreference
        android:defaultValue="2500"
...
